apply plugin: 'java'
apply plugin: 'idea'

idea {
    module {
        inheritOutputDirs = false
        outputDir file("webapp/WEB-INF/classes")
    }
}

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

ext {
    springVersion = '5.2.6.RELEASE'
    tomcatVersion = '8.5.42'
}

dependencies {
    // servlet
    implementation 'javax.servlet:jstl:1.2'
    implementation 'javax.servlet:javax.servlet-api:3.1.0'

    // apache commons
    implementation 'org.apache.commons:commons-lang3:3.10'
    implementation 'org.apache.commons:commons-dbcp2:2.7.0'

    // spring
    implementation 'org.springframework:spring-jdbc:' + springVersion
    implementation 'org.springframework:spring-web:' + springVersion

    // aop
    implementation 'org.aspectj:aspectjweaver:1.9.5'
    implementation 'cglib:cglib:3.3.0'

    // etc
    implementation 'org.reflections:reflections:0.9.10'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
    implementation 'com.github.jknack:handlebars:4.2.0'
    implementation 'com.google.guava:guava:29.0-jre'
    implementation 'org.apache.ant:ant:1.10.8'
    implementation 'com.google.code.gson:gson:2.8.6'

    // tomcat
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:' + tomcatVersion
    implementation 'org.apache.tomcat.embed:tomcat-embed-logging-juli:8.5.2'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:' + tomcatVersion

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.12'
    annotationProcessor 'org.projectlombok:lombok:1.18.12'

    runtimeOnly 'com.h2database:h2:1.4.199'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.2'
    testImplementation 'org.assertj:assertj-core:3.16.1'
    testImplementation 'org.springframework:spring-test:' + springVersion
}

test {
    useJUnitPlatform()
}
